--- a/coeus-impl/pom.xml
+++ b/coeus-impl/pom.xml
@@ -25,11 +25,11 @@
     <parent>
         <groupId>org.kuali.coeus</groupId>
         <artifactId>coeus</artifactId>
-        <version>6.0.0</version>
+        <version>6.0.0.0-kualico-SNAPSHOT</version>
     </parent>
     <artifactId>coeus-impl</artifactId>
     <packaging>jar</packaging>
-    <name>Kuali Coeus Impl</name>
+    <name>KualiCo Cloud Express Impl</name>
     <description>
         The Kuali Coeus Impl module contains the main source code (implementation and framework code) and unit tests for the Kuali Coeus application.
     </description>
