--- a/coeus-tool/pom.xml
+++ b/coeus-tool/pom.xml
@@ -25,11 +25,11 @@
     <parent>
         <groupId>org.kuali.coeus</groupId>
         <artifactId>coeus</artifactId>
-        <version>6.0.0</version>
+        <version>6.0.0.0-kualico-SNAPSHOT</version>
     </parent>
     <artifactId>coeus-tool</artifactId>
     <packaging>jar</packaging>
-    <name>Kuali Coeus Tool</name>
+    <name>KualiCo Cloud Express Tool</name>
     <description>
         The Kuali Coeus Tool module contains scripts and utilities for the Kuali Coeus application. The code in this
         module is not directly used by the Kuali Coeus application. For example: this module could contain developer
