CX Version Changes -- Primarily Bug Fixes
g diff -w kc-release-5_2_1-tag..rsmart-5.2.1 --stat=999 >! git_diff_kc-release-5_2_1-tag..rsmart-5.2.1_stat.txt

Removed all files we do not want to consider for merge

normalize changed files we want to merge

Create patches for kc-release-5_2_1-tag..rsmart-5.2.1 diffs

map relocated path for files that could not be automatically matched

Added missing patches from: Create patches for kc-release-5_2_1-tag..rsmart-5.2.1 diffs

removed trailing space from patch file

basic patch rewriting script ready

squashed some path rewriting logic bugs; smoke testing LGTM

./rewrite_patches.rb

add CX_PORTING.md

Manually merged `cb38ce9` KualiCo pom.xml changes.

Conflicts:
	pom.xml

updated CX_PORTING for cx_patches/pom.xml.patch

applied cx_patches/src/main/config/kew/xml/2/AwardDocument.xml.patch

cx_patches/src/main/config/sql/current/5.2.1/dml/KR_DML_01_KRACOEUS-6640_B000.sql.patch

cx_patches/src/main/config/sql/current/5.2.1/sequences/KC_SEQ_S2S_USER_ATTACHED_FORM_ID.sql.patch

cx_patches/src/main/config/sql/current/5.2.1/sequences/KC_SEQ_S2S_USER_ATTD_FORM_ATT_ID.sql.patch

cx_patches/src/main/config/sql/current_mysql/0.0.0/dml/KR_DML_01_KCINFR-1018_B000.sql.patch

cx_patches/src/main/config/sql/current_mysql/5.2.1/dml/KR_DML_01_KRACOEUS-6640_B000.sql.patch

cx_patches/src/main/config/sql/current_mysql/5.2.1/sequences/KC_SEQ_S2S_USER_ATTACHED_FORM_ATT_ID.sql.patch

cx_patches/src/main/config/sql/current_mysql/5.2.1/sequences/KC_SEQ_S2S_USER_ATTACHED_FORM_ID.sql.patch

cx_patches/src/main/config/sql/current_mysql/5.2.1/tables/KC_TBL_CONTACT_USAGE.sql.patch
Fixes: Caused by: java.sql.SQLException: Can't create table `coeus`.`#sql-c8e0_78` (errno: 150 "Foreign key constraint is incorrectly formed")
Caused by: com.googlecode.flyway.core.command.FlywaySqlScriptException: Error executing statement at line 3: ALTER TABLE CONTACT_USAGE

cx_patches/src/main/config/sql/RELEASE-SCRIPTS/KC_Install.sh.patch

cx_patches/src/main/java/com/rsm

--- a/coeus-db/coeus-db-sql/pom.xml
+++ b/coeus-db/coeus-db-sql/pom.xml
@@ -29,7 +29,7 @@
     </parent>
     <artifactId>coeus-db-sql</artifactId>
     <packaging>jar</packaging>
-    <name>Kuali Coeus Database SQL</name>
+    <name>KualiCo Cloud Express Database SQL</name>
     <description>
         The Kuali Coeus Database SQL module contains sql files for the Kuali Coeus application.  These scripts include
         support for MySQL, and Oracle.  They include both bootstrap and demo data.
