--- a/coeus-impl/src/main/resources/ApplicationResources.properties
+++ b/coeus-impl/src/main/resources/ApplicationResources.properties
@@ -368,6 +368,7 @@ error.invalid.date.required.for=There is a conflict between Valid Answers and Da
 error.invalid.explanation.required.for=There is a conflict between Valid Answers and Explanation Required For configuration.
 error.invalid.primeSponsorCode=Prime Sponsor ID is invalid.
 error.invalid.sponsorCode=Sponsor Code is invalid.
+error.invalid.countryCode=Sponsor Country Code is invalid.
 error.invalid.deadLineTime= DeadlineTime is invalid.
 error.invalid.awardId=Award ID is invalid.
 error.invalid.rolodexId=Rolodex ID is invalid.
@@ -826,9 +827,9 @@ error.award.awardhierarchy.sync.invalidstatus=The Award {0} must have an active 
 error.award.awardhierarchy.sync.locked=This Award has been locked for an Award Hierarchy Sync operation by document number {0}. 
 
 #START - Overriden rice properties
-app.feedback.linkText=Provide Feedback
+app.feedback.linkText=Get Help
 #To not show a feedback link, simply leave the feedback link blank.
-app.feedback.link=https://test.kuali.org/jira/secure/CreateIssue.jspa?pid=10310&issuetype=1
+app.feedback.link=mailto:support@rsmart.com?Subject=Help
 document.question.delete.text=Are you sure you want to delete {0}?
 #END - Overriden rice properties
 
