--- a/coeus-it/pom.xml
+++ b/coeus-it/pom.xml
@@ -29,7 +29,7 @@
     </parent>
     <artifactId>coeus-it</artifactId>
     <packaging>jar</packaging>
-    <name>Kuali Coeus Integration Test</name>
+    <name>KualiCo Cloud Express Integration Test</name>
     <description>
         The Kuali Coeus Integration Test module contains integration tests for the Kuali Coeus application.
     </description>
