--- a/coeus-impl/pom.xml
+++ b/coeus-impl/pom.xml
@@ -596,5 +596,10 @@
             <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.rsmart</groupId>
+            <artifactId>tokenauth</artifactId>
+        </dependency>
     </dependencies>
 </project>
