--- a/coeus-impl/pom.xml
+++ b/coeus-impl/pom.xml
@@ -601,5 +601,10 @@
             <groupId>com.rsmart</groupId>
             <artifactId>tokenauth</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.rsmart.kuali</groupId>
+            <artifactId>cx_data_migration</artifactId>
+        </dependency>
     </dependencies>
 </project>
